...
                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="35"/>
                                                <color key="textColor" red="0.83086061479999995" green="0.63415247200000002" blue="0.32021737099999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <textField opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter first name" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="nfM-Yg-TEL">
                                                <rect key="frame" x="24" y="114" width="366" height="34"/>
                                                <accessibility key="accessibilityConfiguration" identifier="firstName"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits" returnKeyType="go" enablesReturnKeyAutomatically="YES"/>
                                            </textField>
                                            <textField opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter last name" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="D2M-AP-24F">
                                                <rect key="frame" x="24" y="184" width="366" height="34"/>
                                                <accessibility key="accessibilityConfiguration" identifier="lastName"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits" returnKeyType="go" enablesReturnKeyAutomatically="YES"/>
                                            </textField>
                                            <textField opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter email address" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="SZz-54-K7Q">
                                                <rect key="frame" x="24" y="254" width="366" height="34"/>
                                                <accessibility key="accessibilityConfiguration" identifier="email"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits" returnKeyType="go" enablesReturnKeyAutomatically="YES"/>
                                            </textField>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CY4-4I-dH2">
                                                <rect key="frame" x="157" y="342" width="100" height="44"/>
                                                <color key="backgroundColor" red="0.1176470588" green="0.19215686269999999" blue="0.38823529410000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <accessibility key="accessibilityConfiguration" identifier="create"/>
                                                <color key="tintColor" red="0.83086061479999995" green="0.63415247200000002" blue="0.32021737099999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <state key="normal" title="Button"/>
                                                <buttonConfiguration key="configuration" style="plain" title="Create">
                                                    <fontDescription key="titleFontDescription" type="system" weight="semibold" pointSize="25"/>
                                                </buttonConfiguration>
                                                <connections>
                                                    <action selector="createPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="QSa-lF-nfH"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oNW-Xq-K33">
                                                <rect key="frame" x="145" y="442" width="124" height="44"/>
                                                <color key="backgroundColor" red="0.1176470588" green="0.19215686269999999" blue="0.38823529410000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <accessibility key="accessibilityConfiguration" identifier="userList"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="44" id="d6i-s2-rza"/>
                                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="44" id="q7f-rM-vhE"/>
                                                </constraints>
                                                <color key="tintColor" red="0.83086061479999995" green="0.63415247200000002" blue="0.32021737099999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <state key="normal" title="Button"/>
...
