...
        
        if userViewModel.isValid() {
            
            userViewModel.createUser()
        } else {
            
            self.showPopUp(with: userViewModel.description,identifier: "failure")
            userViewModel.clearDescription()
        }
    }
    
    func clearTextFields() {
        
...
}

extension UserViewController : UserViewModelDelegate {
    
    func gotMessage(_ message: String) {
        
        self.showPopUp(with: message, identifier: "Success")
        self.userViewModel.clearUserData()
        self.clearTextFields()
        self.userViewModel.clearDescription()
    }
}

...
